# TokyoAlphaAtlas

./: .gitignore  vercel.json
docs/superpowers/plans/: 2026-06-12-pipeline.md  2026-06-13-web-frontend.md
docs/superpowers/specs/: 2026-06-12-tokyo-alpha-atlas-design.md
pipeline/: .env.example  Makefile  README.md  pyproject.toml
pipeline/atlas/: aggregate.py  api_geo.py  cli.py  config.py  emit.py  eras.py  hazard.py  ingest.py  label.py  landprice.py  normalize.py  population.py  quarters.py  redevelopment.py  schemas.py  score.py  station_names.py
pipeline/tests/: test_aggregate.py  test_api_geo.py  test_cli.py  test_config.py  test_emit.py  test_eras.py  test_hazard.py  test_ingest.py  test_label.py  test_landprice.py  test_normalize.py  test_population.py  test_quarters.py  test_redevelopment.py  test_score.py  test_station_names.py
pipeline/tests/fixtures/: a31_flood.geojson  a33_landslide.geojson  make_fixtures.py  n02_stations.geojson  pop_mesh.geojson  s12_ridership.geojson
pipeline/tests/fixtures/landprice/: L01-2023.geojson  L01-2024.geojson
pipeline/tests/fixtures/transactions/: tx_fixture.csv
web/: README.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vercel.json  vite.config.ts
web/deploy-data/data/: meta.json  quarters.json  stations.json
web/e2e/: smoke.spec.ts
web/scripts/: ensure-data.mjs  ensure-data.test.mjs
web/src/: App.tsx  config.ts  store.test.ts  store.ts  styles.css  test-setup.ts  types.ts
web/src/components/: ErrorBoundary.tsx  Legend.tsx  LensTabs.tsx  MapPulse.tsx  SearchBox.tsx  (+6 more)
(+30 files in other folders)
