[project]
name = "atlas"
version = "0.1.0"
description = "Tokyo Alpha Atlas ETL pipeline"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.1",
    "pandas>=2.2",
    "geopandas>=1.0",
    "shapely>=2.0",
    "pyproj>=3.6",
    "numpy>=2.0",
    "jsonschema>=4.23",
]

[dependency-groups]
dev = ["pytest>=8.3"]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
